--- a/build.gradle
+++ b/build.gradle
@@ -147,15 +147,15 @@ task subdependencies {
 
 project.tasks.getByPath("dependencies").finalizedBy("subdependencies")
 
-task install {
-    configure {
-        description "Publishes all subprojects to local maven repo"
-        setProperty("group", "Publishing")
-    }
-    subprojects.each {
-        it.afterEvaluate {
-            def publishToMavenLocalTask = it.tasks.findByName("publishToMavenLocal")
-            dependsOn(publishToMavenLocalTask)
-        }
-    }
-}
+// task install {
+//     configure {
+//         description "Publishes all subprojects to local maven repo"
+//         setProperty("group", "Publishing")
+//     }
+//     subprojects.each {
+//         it.afterEvaluate {
+//             def publishToMavenLocalTask = it.tasks.findByName("publishToMavenLocal")
+//             dependsOn(publishToMavenLocalTask)
+//         }
+//     }
+// }
