--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,24 +17,8 @@ permissions:
   contents: read
 
 jobs:
-  scan:
-
+  validate:
     runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - uses: gradle/wrapper-validation-action@v1
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'zulu'
-    - run: ./gradlew --no-parallel --no-configure-on-demand hushValidatePipeline
-
-  build:
-
-    runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - uses: gradle/wrapper-validation-action@v1
@@ -43,9 +27,32 @@ jobs:
       with:
         java-version: '17'
         distribution: 'corretto'
-      #- name: Build with Gradle
-      #  uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
-      #  with:
-      #    arguments: --no-parallel --no-configure-on-demand package
+    - name: Validate dependencies
+      run: ./gradlew vogueReport
+
+  scan:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: gradle/wrapper-validation-action@v1
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'corretto'
+    - name: Scan dependencies
+      run: ./gradlew dependencyCheckAnalyze --info
+
+  build:
+    needs: [validate, scan]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: gradle/wrapper-validation-action@v1
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'corretto'
     - name: Build
-      run: ./gradlew --no-parallel --no-configure-on-demand build
+      run: ./gradlew build
