--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@ plugins {
   id "com.github.mxenabled.binks" version "0.0.1"
   id "com.github.mxenabled.vogue" version "1.0.1"
   id "com.github.mxenabled.coppuccino" version "enable_unused_import_javadoc-SNAPSHOT" apply false
-  id "com.github.mxenabled.hush" version "2.2.0" apply false
+  id "com.github.mxenabled.hush" version "2.3.0" apply false
   id "io.freefair.lombok" version "6.5.1" apply false
 }
 
-version "0.0.1"
+version "1.0.0-rc.1"
 
 allprojects {
     group "com.mx.path.sdk"
