--- a/gateway-generator/build.gradle
+++ b/gateway-generator/build.gradle
@@ -1,15 +1,9 @@
-group "com.mx.path.api.gateway"
-
-coppuccino {
-  dependencies { excludePreReleaseVersions = false }
-}
-
 dependencies {
   implementation project(":gateway")
 
   implementation "com.squareup:javapoet:1.13.0"
   implementation "com.google.auto.service:auto-service:1.0.1"
-  implementation "org.projectlombok:lombok:1.18.22"
+  implementation "org.projectlombok:lombok:1.18.24"
 
-  annotationProcessor "com.google.auto.service:auto-service:1.0-rc7"
+  annotationProcessor "com.google.auto.service:auto-service:1.0.1"
 }
