--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,17 @@ subprojects {
     }
   }
 
+  javadoc {
+    source = sourceSets.main.allJava
+    classpath = configurations.compileClasspath
+    options {
+      setMemberLevel JavadocMemberLevel.PUBLIC
+      setAuthor true
+
+      links "https://docs.oracle.com/javase/8/docs/api/"
+    }
+  }
+
   coppuccino {
     rootDir = "${projectDir}/"
   }
@@ -76,14 +87,24 @@ subprojects {
     from sourceSets.main.allSource
   }
 
+  task packageJavadoc(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+  }
+
   artifacts {
     archives sourcesJar
     archives jar
+    archives packageJavadoc
   }
 
   publishing {
     publications {
-      mavenJava(MavenPublication) { from components.java }
+      mavenJava(MavenPublication) {
+        from components.java
+        artifact sourcesJar
+        artifact packageJavadoc
+      }
     }
   }
 }
