feat: add artifact signing

--- a/.gitignore
+++ b/.gitignore
@@ -198,6 +198,7 @@ gradle-app.setting
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+**/.settings
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,java,gradle,intellij
 
