--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@
 # Perform on all push and pull_request events.
 # Steps will be skipped if there are no build-affecting changes
 #
+# * Checks all commits for compliance with conventional commit formatting
 # * Builds all artifacts
 # * Runs all tests
 # * Runs all code checks and linters
@@ -11,11 +12,14 @@
 # * Checks dependencies for vulnerabilities
 #
 # See: https://github.com/dorny/paths-filter
+##
+#on:
+#  workflow_run:
+#    workflows: [ commits ]
+#    types: [ completed ]
 #
 on:
-  workflow_run:
-    workflows: [ commits ]
-    types: [ completed ]
+  push:
 
 name: build
 
@@ -23,13 +27,35 @@ permissions:
   contents: read
 
 jobs:
+  commits:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: gentleseal/action-conventional-commits@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          valid-commit-types: >
+            [
+              "build",
+              "chore",
+              "docs",
+              "feat",
+              "fix",
+              "perf",
+              "refactor",
+              "revert",
+              "style",
+              "test"
+            ]
+
   changes:
+    needs: commits
     runs-on: ubuntu-latest
     # Set job outputs to values from filter step
     outputs:
       src: ${{ steps.filter.outputs.src }}
     steps:
-      - uses: ahmadnassri/action-workflow-run-wait@v1 # wait for worflow_run workflows to succeed
       - uses: actions/checkout@v3
       - uses: dorny/paths-filter@v2
         id: filter
@@ -83,3 +109,29 @@ jobs:
           distribution: 'corretto'
       - name: Build
         run: ./gradlew build
+
+  # ---------------------------------------------------------------
+  # job: release
+  #
+  # Perform after commits and build successfully complete on "master"
+  #
+  # * Creates and maintains "release PR"
+  # * Creates release when the "release PR" is merged to "master"
+  #
+  # See: https://github.com/google-github-actions/release-please-action
+  # See: https://github.com/googleapis/release-please
+  # See: https://github.com/ahmadnassri/action-workflow-run-wait
+  #
+  release:
+    needs: build
+    if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: ahmadnassri/action-workflow-run-wait@v1 # wait for worflow_run workflows to succeed
+      - uses: google-github-actions/release-please-action@v3.5.0
+        with:
+          include-v-in-tag: false
+          release-type: simple
+          extra-files: |
+            build.gradle
+            README.md
