--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
             ]
 
   changes:
-    if: !startsWith(github.ref, 'refs/heads/release-please--')
+    if: ${{ !startsWith(github.ref, 'refs/heads/release-please--') }}
     runs-on: ubuntu-latest
     # Set job outputs to values from filter step
     outputs:
@@ -59,7 +59,7 @@ jobs:
 
   validate:
     needs: [commits, changes]
-    if: ${{ needs.changes.outputs.src == 'true' }} && !startsWith(github.ref, 'refs/heads/release-please--')
+    if: ${{ needs.changes.outputs.src == 'true' && !startsWith(github.ref, 'refs/heads/release-please--') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -74,7 +74,7 @@ jobs:
 
   scan:
     needs: [commits, changes]
-    if: ${{ needs.changes.outputs.src == 'true' }} && !startsWith(github.ref, 'refs/heads/release-please--')
+    if: ${{ needs.changes.outputs.src == 'true' && !startsWith(github.ref, 'refs/heads/release-please--') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -89,7 +89,7 @@ jobs:
 
   build:
     needs: [commits, changes]
-    if: ${{ needs.changes.outputs.src == 'true' }} && !startsWith(github.ref, 'refs/heads/release-please--')
+    if: ${{ needs.changes.outputs.src == 'true' && !startsWith(github.ref, 'refs/heads/release-please--') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
