--- a/common/build.gradle
+++ b/common/build.gradle
@@ -5,9 +5,9 @@ coppuccino {
 }
 
 dependencies {
-  api "org.apache.commons:commons-text:+" // For string manipulation utilities. There is a very small overlap with Guava's strings class, but adds many more features.
-  api "com.google.guava:guava:31.+" // For google utilities
+  api "org.apache.commons:commons-text:latest.release" // For string manipulation utilities. There is a very small overlap with Guava's strings class, but adds many more features.
+  api "com.google.guava:guava"
   api "com.github.spotbugs:spotbugs-annotations:4.7.2" // For annotating classes and methods to suppress SpotBugs violations
-  api "com.google.code.gson:gson:2.9.+"
+  api "com.google.code.gson:gson"
   api "org.yaml:snakeyaml:1.33"
 }
