--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -15,15 +15,15 @@ dependencies {
   api project(":common")
   api project(":context")
   api project(":messaging")
-  api "io.opentracing:opentracing-api:0.33.0"
+  api "io.opentracing:opentracing-api"
   api "${project.property('xmlbindapi')}"
   api "${project.property('xmlsoapapi')}"
   api "${project.property('jaxbimpl')}"
   api "${project.property('jaxbruntime')}"
 
-  implementation "org.slf4j:slf4j-api:1.7.30"
-  implementation "org.apache.httpcomponents:httpclient:4.5.13"
-  implementation "commons-lang:commons-lang:2.6"
+  implementation "org.slf4j:slf4j-api"
+  implementation "org.apache.httpcomponents:httpclient"
+  implementation "commons-lang:commons-lang"
   implementation "org.reflections:reflections:0.10.2"
 
   //testing dependencies
