--- a/http/build.gradle
+++ b/http/build.gradle
@@ -7,10 +7,10 @@ coppuccino {
 dependencies {
   implementation project(":gateway")
 
-  implementation "io.opentracing:opentracing-api:0.33.0"
-  implementation "org.apache.httpcomponents:httpclient:4.5.13"
+  implementation "io.opentracing:opentracing-api"
+  implementation "org.apache.httpcomponents:httpclient"
   implementation "commons-beanutils:commons-beanutils:1.9.4"
-  compileOnly "org.slf4j:slf4j-api:1.7.30"
+  compileOnly "org.slf4j:slf4j-api"
 
   testImplementation "io.opentracing:opentracing-mock:0.33.0"
   testImplementation "org.slf4j:slf4j-simple:1.7.30"
