--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,14 +6,13 @@
 # Signs and published artifacts to Maven Central
 #
 on:
-  release:
-    types: [created]
+  workflow_dispatch:
+  workflow_call:
 
 name: publish
 
 jobs:
   publish:
-    name: 'Publish Release'
     runs-on: ubuntu-latest
 
     steps:
