--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,35 +1,17 @@
-# ---------------------------------------------------------------
-# workflow: publish
-#
-# Perform on all release:create events
-#
-# Signs and published artifacts to Maven Central
-#
 on:
   workflow_dispatch:
-  workflow_call:
+    inputs:
+      dry-run:
+        default: false
+        description: Dry-Run
+        required: false
+        type: boolean
 
 name: publish
 
 jobs:
   publish:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'corretto'
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-      - name: Publish Release
-        run: |
-          export ORG_GRADLE_PROJECT_signingKey=$(echo -n "$GPG_SIGNING_KEY_BASE64" | base64 -d)
-          ./gradlew publishToCentral closeAndReleaseCentralStagingRepository
-        env:
-          ORG_GRADLE_PROJECT_ossrhUserName: ${{ secrets.OSSRH_USERNAME }}
-          ORG_GRADLE_PROJECT_ossrhToken: ${{ secrets.OSSRH_TOKEN }}
-          GPG_SIGNING_KEY_BASE64: ${{ secrets.GPG_SIGNING_KEY_BASE64 }}
-          ORG_GRADLE_PROJECT_signingKeyPassword: ${{ secrets.GPG_SIGNING_PASSPHRASE }}
+    permissions: read-all
+    uses: mxenabled/path-tools/.github/workflows/publish.yml@master
+    with:
+      dry-run: ${{ inputs.dry-run }}
