--- a/build.gradle
+++ b/build.gradle
@@ -48,19 +48,6 @@ subprojects {
     apply plugin: "com.github.mxenabled.vogue"
     apply plugin: "io.freefair.lombok"
 
-    ext {
-      // -----------------------------------------------------------------
-      // These re-add JAXB classes needed for SOAP interaction.
-      // Version changes to any of these need to be tested (not just built)
-      //   with an apps that use SOAP.
-      // -----------------------------------------------------------------
-      xmlbindapi = "jakarta.xml.bind:jakarta.xml.bind-api:2.3.3"
-      xmlsoapapi = "jakarta.xml.soap:jakarta.xml.soap-api:1.4.2"
-      jaxbimpl = "com.sun.xml.bind:jaxb-impl:2.3.1"
-      jaxbruntime = "org.glassfish.jaxb:jaxb-runtime:2.3.3"
-      // -----------------------------------------------------------------
-    }
-
     dependencies {
       constraints {
         api("com.google.code.gson:gson") {
@@ -81,6 +68,17 @@ subprojects {
         api "commons-lang:commons-lang:2.6"
         api "org.slf4j:slf4j-api:1.7.30"
         api "org.apache.httpcomponents:httpclient:4.5.13"
+
+        // -----------------------------------------------------------------
+        // These re-add JAXB classes needed for SOAP interaction.
+        // Version changes to any of these need to be tested (not just built)
+        //   with an apps that use SOAP.
+        // -----------------------------------------------------------------
+        api "jakarta.xml.bind:jakarta.xml.bind-api:2.3.3!!"
+        api "jakarta.xml.soap:jakarta.xml.soap-api:1.4.2!!"
+        api "com.sun.xml.bind:jaxb-impl:2.3.1!!"
+        api "org.glassfish.jaxb:jaxb-runtime:2.3.3!!"
+        // -----------------------------------------------------------------
       }
 
       testImplementation "org.mockito:mockito-inline:[4.0,5.0["
