build: add reference to extra-files

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,6 +4,10 @@
   "prerelease": false,
   "packages": {
     ".": {
+      "extra-files": [
+        "build.gradle",
+        "README.md"
+      ]
     }
   }
 }
